crates/pmcp-code-mode-derive/tests/ui/missing_policy_evaluator.stderr
error: #[derive(CodeMode)] requires field `policy_evaluator` (type: Arc<dyn PolicyEvaluator>).
       Required fields: code_mode_config, token_secret, policy_evaluator, code_executor
  --> tests/ui/missing_policy_evaluator.rs:19:8
   |
19 | struct MyServer {
   |        ^^^^^^^^
